# claude-code-lark

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  README.md  bot.command  pyproject.toml
.claude/: plan.md
.github/workflows/: ci.yml  claude.yml  release.yml
docs/: LARK_SETUP.md  configuration.md  setup.md  todo-5-claude-integration.md  todo-9-deployment.md  tools.md
scripts/migrations/: add_platform_support.py
src/: __init__.py  main.py
src/api/: server.py
src/bot/: core.py  core_engine.py  core_multiplatform.py  orchestrator.py
src/bot/adapters/: __init__.py  base.py  factory.py  lark.py  models.py  telegram.py
src/bot/features/: registry.py  voice_handler.py
src/bot/handlers/: command.py  message.py
src/bot/utils/: draft_streamer.py
src/claude/: facade.py  monitor.py  sdk_integration.py  session.py
src/config/: features.py  settings.py
src/events/: handlers.py
src/storage/: database.py  facade.py  models.py  repositories.py
tests/unit/: test_config.py  test_orchestrator.py
tests/unit/test_bot/: test_draft_streamer.py  test_voice_handler.py
tests/unit/test_claude/: test_facade.py  test_monitor.py  test_sdk_integration.py  test_session.py
tests/unit/test_security/: test_validators.py
tests/unit/test_storage/: test_repositories.py
